@@ -1,4 +1,5 @@
 {{$NEXT}}
+- TraceOnly now emulates send_transactional as well as send
 
 2.0       2013-05-23 22:19:12 Europe/London
 - TracerRole now allows you to specify the permissions for the
